--- a/resources/window.ui
+++ b/resources/window.ui
@@ -1,16 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
+
+    <!-- the menu model -->
+  <menu id="main-menu">
+    <item>
+      <attribute name="label" translatable="yes">_Close window</attribute>
+    </item>
+    <item>
+      <attribute name="label" translatable="yes">_Sensitive button</attribute>
+    </item>
+    <section>
+      <attribute name="label" translatable="yes">Orientation</attribute>
+      <item>
+        <attribute name="label" translatable="yes">_Horizontal</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes">_Vertical</attribute>
+      </item>
+    </section>
+  </menu>
+
   <template class="MyGtkAppWindow" parent="GtkApplicationWindow">
-    <property name="title">My GTK App</property>
+    <property name="title">gtk4 rust</property>
+
+    <!-- the menu bar -->
+    <child type="titlebar">
+      <object class="GtkHeaderBar">
+        <child type ="end">
+          <object class="GtkMenuButton">
+            <property name="icon-name">open-menu-symbolic</property>
+            <property name="menu-model">main-menu</property>
+            <property name="tooltip-text" translatable="yes">Main Menu</property>
+          </object>
+        </child>
+      </object>
+    </child>
+
+    <!-- box layout, vertical -->
     <child>
-      <object class="GtkFixed">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
+      <object class="GtkBox" id="gtk_box">
+        <property name="orientation">vertical</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>
+        <property name="spacing">12</property>
+        <property name="halign">center</property>
+
+        <!-- button 1 -->
         <child>
           <object class="GtkButton" id="button1">
-            <layout>
-              <property name="transform">translate(0, 0)</property>
-            </layout>
             <property name="label" translatable="yes">Button 1</property>
             <property name="width-request">100</property>
             <property name="height-request">80</property>
@@ -19,11 +58,10 @@
             <property name="receives-default">True</property>
           </object>
         </child>
+
+        <!-- button 2 -->
         <child>
           <object class="GtkButton" id="button2">
-            <layout>
-              <property name="transform">translate(100, 0)</property>
-            </layout>
             <property name="label" translatable="yes">Button 2</property>
             <property name="width-request">100</property>
             <property name="height-request">80</property>
@@ -32,7 +70,9 @@
             <property name="receives-default">True</property>
           </object>
         </child>
+
       </object>
     </child>
+
   </template>
 </interface>
